# secure-rag-ideis

./: .env.example  .gitignore  README.md  pyproject.toml
data/knowledge/: ideis_krakow_kontakt.md
data/pdf/: SOURCES.md
docs/: ARCHITECTURE.md  BOUNDARIES_AND_TESTS.md  PRESENTATION.md
evals/: cases.json  live_factual_cases.json  ollama_smoke_case.json
launcher/: Program.cs
output/pdf/: uml-bezpieczny-chatbot-rag.tex
scripts/: bootstrap.ps1
secure_rag_bot/: __init__.py  audit.py  config.py  demo.py  evaluation.py  evidence.py  fact_policy.py  factory.py  grounding.py  ingest.py  llm.py  models.py  nlp.py  pipeline.py  preflight.py  privacy.py  rag.py  safety.py  telegram_app.py  text_processing.py
tests/: test_pipeline.py  test_privacy.py  test_safety.py  test_terminal_trace.py  test_text_processing.py
